--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>world cup</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/world_cup.css">
 </head>
 <body>
-    <header>
-        
+    <!-- hero-section -->
+    <header class="hero">
+        <div class="hero-text">
+            <h1 class="hero-title"> 
+                The Greatest show on the earth
+            </h1>
+            <p class="hero-description">
+                Contrary to popular belief, Lorem Ipsum is not simply 
+                random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+            </p>
+            <button class="btn-primary">
+                Watch Live <i class="fa-solid fa-arrow-right"></i>
+            </button>
+        </div>
+        <div class="hero-image">
+            <img src="./assets/img/banner/banner-img.png" alt="">
+        </div>
     </header>
     <main>
 
