mobile responsive design done for hero section

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 Contrary to popular belief, Lorem Ipsum is not simply 
                 random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
             </p>
-            <button class="btn-primary">
+            <button id="hero-btn" class="btn-primary">
                 Watch Live <i class="fa-solid fa-arrow-right"></i>
             </button>
         </div>
         <div class="hero-image">
-            <img src="./assets/img/banner/banner-img.png" alt="">
+            <img id="bg-img" src="./assets/img/banner/banner-img.png" alt="">
         </div>
     </header>
     <main>
